--- a/2/LendingTree/LTWeb/Web.config
+++ b/2/LendingTree/LTWeb/Web.config
@@ -8,7 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings configSource="App_Data\connectionsconfig.xml"></connectionStrings>
+  <connectionStrings>
+
+    <add name="LTWebDataContext" connectionString="data source=.\sqlexpress;initial catalog=LTWeb;User=sa;Password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
