--- a/2/LendingTree/LTWeb/Web.config
+++ b/2/LendingTree/LTWeb/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
 
-    <add name="LTWebDataContext" connectionString="data source=.\sqlexpress;initial catalog=LTWeb;User=sa;Password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="LTWebDataContext" connectionString="data source=.\sqlexpress;initial catalog=LTWebLenny;User=sa;Password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     
   </connectionStrings>
   <appSettings>
@@ -21,7 +21,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!-- Begin LTWeb -->
     <add key="LendingTreeServiceConfig" value="Test" />
-    <add key="BaseUrl" value="https://mortgage-rate-offers.com" />
+    <add key="BaseUrl" value="http://l.mortgage-rate-offers.com" />
     <add key="AdminIps" value="24.103.67.186,::1" />
     <add key="StatesExcludedFromDisclosure" value="AK,AR,CT,DC,GA,HI,MI,NE,NH,NM,OK,OR,SD,TN,UT,WV" />
     <add key="Mode_SsnRequired" value="2" />
