--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -5,10 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="CakeContext" connectionString="metadata=res://*/Contexts.Cake.csdl|res://*/Contexts.Cake.ssdl|res://*/Contexts.Cake.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;User Id=sa;Password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DefaultConnection" connectionString="data source=biz2\da;initial catalog=ClientPortal;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
-    <add name="CakeExtracterContext" connectionString="data source=biz2\da;initial catalog=CakeExtract;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="data source=.\sql2;initial catalog=ClientPortal;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -18,7 +16,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="UseMiniProfiler" value="true" />
     <add key="UseBlackbird" value="true" />
-    <add key="UseNullDatabaseInitializer" value="true" />
+    <add key="UseNullDatabaseInitializer" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
@@ -28,7 +26,7 @@
     </compilation>
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="7200" />
+      <forms loginUrl="~/Account/Login" timeout="525600" />
     </authentication>
     <pages>
       <namespaces>
@@ -41,7 +39,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <sessionState timeout="7200" />
+    <sessionState timeout="525600" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
