--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
+  <package id="CsvHelper" version="1.17.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
