--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -39,6 +39,7 @@
   </appSettings>
   <connectionStrings>
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ClientPortal2;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CakeTrafficContext" connectionString="data source=.;initial catalog=CakeTraffic;user id=sa;password=sp0ngbOb;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
