--- a/3/BingAds/BingAds.csproj
+++ b/3/BingAds/BingAds.csproj
@@ -42,7 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Campaigns.cs" />
+    <Compile Include="Reports.cs" />
+    <Compile Include="Service References\Reporting\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\CampaignManagement\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -395,9 +401,29 @@
     <None Include="Service References\CampaignManagement\CampaignManagementService4.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\Reporting\BingAds.Reporting.PollGenerateReportResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Reporting\BingAds.Reporting.SubmitGenerateReportResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Reporting\ReportingService.wsdl" />
+    <None Include="Service References\Reporting\ReportingService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\Reporting\ReportingService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\Reporting\ReportingService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\Reporting\ReportingService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\CampaignManagement\" />
+    <WCFMetadataStorage Include="Service References\Reporting\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\CampaignManagement\configuration91.svcinfo" />
@@ -407,6 +433,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\CampaignManagement\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\Reporting\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\Reporting\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\Reporting\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
