--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -36,12 +36,31 @@
   <appSettings>
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="BingApiToken" value="EW65911AO" />
+    <add key="BingApiUsername" value="API_DanielOwen" />
+    <add key="BingApiPassword" value="agentdan1" />
+    <add key="BingReportFolder" value="C:\Downloads" />
+    <add key="BingReportFilename" value="bingrep.zip" />
   </appSettings>
   <connectionStrings>
-    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ClientPortal2;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CakeTrafficContext" connectionString="data source=.;initial catalog=CakeTraffic;user id=sa;password=sp0ngbOb;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IReportingService">
+          <security mode="Transport" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://adcenterapi.microsoft.com/Api/Advertiser/V8/Reporting/ReportingService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReportingService"
+        contract="Reporting.IReportingService" name="BasicHttpBinding_IReportingService" />
+    </client>
+  </system.serviceModel>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
