more ETL, removed cols from Offer table

--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -153,12 +153,15 @@
     <Compile Include="CakeMarketingApi\Entities\ConversionReportResponse.cs" />
     <Compile Include="CakeMarketingApi\Entities\Country.cs" />
     <Compile Include="CakeMarketingApi\Entities\DateRangeTraffic.cs" />
+    <Compile Include="CakeMarketingApi\Entities\Received.cs" />
     <Compile Include="CakeMarketingApi\Entities\Region.cs" />
+    <Compile Include="Commands\SynchConversionsCommand.cs" />
     <Compile Include="Commands\SynchCakeTrafficCommand.cs" />
     <Compile Include="Commands\SynchClicksCommand.cs" />
     <Compile Include="Commands\SynchSearchDailySummariesBingCsvCommand.cs" />
     <Compile Include="Common\CopyPropertiesUtility.cs" />
     <Compile Include="Common\EmailUtility.cs" />
+    <Compile Include="Common\EntityFrameworkExtensions.cs" />
     <Compile Include="Common\LinqExtensions.cs" />
     <Compile Include="Common\LogElapsedTime.cs" />
     <Compile Include="Common\ReflectionExtensions.cs" />
@@ -189,11 +192,14 @@
     <Compile Include="CakeMarketingApi\CakeMarketingUtility.cs" />
     <Compile Include="Data\CakeTraffic\CakeTrafficContext.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\ClicksExtracter.cs" />
+    <Compile Include="Etl\CakeMarketing\Extracters\ConversionsExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\TrafficExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\DailySummariesExtracter.cs" />
     <Compile Include="CakeMarketingApi\Entities\OfferDailySummary.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\ClicksLoader.cs" />
+    <Compile Include="Etl\CakeMarketing\Loaders\ConversionsLoader.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\TrafficLoader.cs" />
+    <Compile Include="Etl\MultiLoader.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\BingCsvReportExtracter.cs" />
     <Compile Include="Etl\SearchMarketing\Loaders\BingLoader.cs" />
     <Compile Include="Etl\Transformer.cs" />
