--- a/3/ClientPortal.Web/packages/repositories.config
+++ b/3/ClientPortal.Web/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\..\CakeExtracter\CakeExtracter\packages.config" />
   <repository path="..\..\ClientPortal.Data\packages.config" />
   <repository path="..\..\DirectAgents.Mvc\packages.config" />
+  <repository path="..\..\LineCommander\packages.config" />
   <repository path="..\..\QuickBooks.WebConnector\packages.config" />
   <repository path="..\..\QuickBooks\packages.config" />
   <repository path="..\ClientPortal.Web.Tests\packages.config" />
