--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -134,6 +134,9 @@
     <Compile Include="Bootstrappers\IBootstrapper.cs" />
     <Compile Include="Bootstrappers\LoggingBootstrapper.cs" />
     <Compile Include="Bootstrappers\ServicePointBootstrapper.cs" />
+    <Compile Include="CakeMarketingApi\Clients\AdvertisersRequest.cs" />
+    <Compile Include="CakeMarketingApi\Entities\AdvertiserExportResponse.cs" />
+    <Compile Include="CakeMarketingApi\Clients\AdvertisersClient.cs" />
     <Compile Include="CakeMarketingApi\Clients\ApiClient.cs" />
     <Compile Include="CakeMarketingApi\Clients\ApiRequest.cs" />
     <Compile Include="CakeMarketingApi\Clients\ClicksClient.cs" />
@@ -152,12 +155,17 @@
     <Compile Include="CakeMarketingApi\Entities\Conversion.cs" />
     <Compile Include="CakeMarketingApi\Entities\ConversionReportResponse.cs" />
     <Compile Include="CakeMarketingApi\Entities\Country.cs" />
+    <Compile Include="CakeMarketingApi\Entities\Currency.cs" />
     <Compile Include="CakeMarketingApi\Entities\DateRangeTraffic.cs" />
+    <Compile Include="CakeMarketingApi\Entities\OfferContractInfo.cs" />
+    <Compile Include="CakeMarketingApi\Entities\PriceFormat.cs" />
     <Compile Include="CakeMarketingApi\Entities\Received.cs" />
     <Compile Include="CakeMarketingApi\Entities\Region.cs" />
+    <Compile Include="Commands\SynchAdvertisersCommand.cs" />
     <Compile Include="Commands\SynchConversionsCommand.cs" />
     <Compile Include="Commands\SynchCakeTrafficCommand.cs" />
     <Compile Include="Commands\SynchClicksCommand.cs" />
+    <Compile Include="Commands\SynchOffersCommand.cs" />
     <Compile Include="Commands\SynchSearchDailySummariesBingCommand.cs" />
     <Compile Include="Commands\SynchSearchDailySummariesBingCsvCommand.cs" />
     <Compile Include="Common\CopyPropertiesUtility.cs" />
@@ -192,14 +200,19 @@
     <Compile Include="Common\BatchingExtensions.cs" />
     <Compile Include="CakeMarketingApi\CakeMarketingUtility.cs" />
     <Compile Include="Data\CakeTraffic\CakeTrafficContext.cs" />
+    <Compile Include="Etl\CakeMarketing\Extracters\AdvertisersExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\ClicksExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\ConversionsExtracter.cs" />
+    <Compile Include="Etl\CakeMarketing\Extracters\OffersExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\TrafficExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Extracters\DailySummariesExtracter.cs" />
     <Compile Include="CakeMarketingApi\Entities\OfferDailySummary.cs" />
+    <Compile Include="Etl\CakeMarketing\Loaders\AdvertisersLoader.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\ClicksLoader.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\ConversionsLoader.cs" />
+    <Compile Include="Etl\CakeMarketing\Loaders\OffersLoader.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\TrafficLoader.cs" />
+    <Compile Include="Etl\ILoader.cs" />
     <Compile Include="Etl\MultiLoader.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\BingCsvReportExtracter.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\BingDailySummaryExtracter.cs" />
@@ -210,6 +223,7 @@
     <Compile Include="Etl\Extracter.cs" />
     <Compile Include="Etl\Loader.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\DailySummariesLoader.cs" />
+    <Compile Include="Etl\LoaderTask.cs" />
     <Compile Include="ICakeMarketing.cs" />
     <Compile Include="ICakeMarketingCache.cs" />
     <Compile Include="Logging\Loggers\ConsoleLogger.cs" />
@@ -233,7 +247,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="CakeMarketingApi\CakeMarketingApi.cd" />
-    <None Include="CakeMarketingApi\Entities\Click.cd" />
+    <None Include="CakeMarketingApi\Entities\Class Diagram.cd" />
     <None Include="Etl\Etl.cd" />
     <None Include="packages.config" />
   </ItemGroup>
@@ -255,6 +269,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\morelinq\MoreLinq\MoreLinq.csproj">
+      <Project>{8642e81b-3414-4c13-914f-05a4e600fe49}</Project>
+      <Name>MoreLinq</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\BingAds\BingAds.csproj">
       <Project>{e2ea8ab5-abaf-4007-a446-09624cb159e6}</Project>
       <Name>BingAds</Name>
