added devices to datawarehouse, allowing for clicks w/no conversion

--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -116,6 +116,9 @@
     <Compile Include="Contexts\DimDate.cs">
       <DependentUpon>ClientPortalDW.tt</DependentUpon>
     </Compile>
+    <Compile Include="Contexts\DimDevice.cs">
+      <DependentUpon>ClientPortalDW.tt</DependentUpon>
+    </Compile>
     <Compile Include="Contexts\DimOffer.cs">
       <DependentUpon>ClientPortalDW.tt</DependentUpon>
     </Compile>
