--- a/3/ClientPortal.Web/packages/repositories.config
+++ b/3/ClientPortal.Web/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\CakeExtracter.ConsoleApplication\packages.config" />
   <repository path="..\..\CakeExtracter.UnitTests\packages.config" />
   <repository path="..\..\CakeExtracter\CakeExtracter\packages.config" />
   <repository path="..\..\ClientPortal.Data\packages.config" />
