UserProfile: generate password & send email

--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -18,6 +18,8 @@
     <add key="UseMiniProfiler" value="true" />
     <add key="UseBlackbird" value="true" />
     <add key="UseNullDatabaseInitializer" value="false" />
+    <add key="EmailFromDefault" value="reporting@directagents.com" />
+    <add key="PortalUrl" value="http://beta.portal.directagents.com/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
