--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
+  <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
   <package id="CsvHelper" version="1.17.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
@@ -8,5 +9,6 @@
   <package id="EntityFramework.Extended" version="5.0.0.73" targetFramework="net45" />
   <package id="ManyConsole" version="0.4.2.16" targetFramework="net45" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net45" />
+  <package id="Quartz" version="2.1.2" targetFramework="net45" />
   <package id="RestSharp" version="104.1" targetFramework="net45" />
 </packages>
