--- a/3/ClientPortal.Web/ClientPortal.Web.Tests/ClientPortal.Web.Tests.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web.Tests/ClientPortal.Web.Tests.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -113,6 +114,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\ClientPortal.Data\ClientPortal.Data.csproj">
+      <Project>{2E621B59-9455-4FA5-B9BD-6BDC418FFBFA}</Project>
+      <Name>ClientPortal.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\DirectAgents.Mvc\DirectAgents.Mvc.csproj">
       <Project>{bf827e4b-b65d-42ae-98ad-441626532f00}</Project>
       <Name>DirectAgents.Mvc</Name>
